Add head to index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta name="description" content="Serie de las trepidantes aventuras de los bebelopers de Isdi coders">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>ISDI Coders - La Serie</title>
 </head>
 
 <body>
-
+  <main>
+    <ul>
+      <li><a href=""></a></li>
+    </ul>
+  </main>
 </body>
 
 </html>
