--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <h1>Pasion de Bebelopers</h1>
   <ul>
     <li><a href="./season01.html">Temporada 1</a></li>
+    <li><a href="./season02.html">Temporada 2</a></li>
   </ul>
 </body>
 
