--- a/season04.html
+++ b/season04.html
@@ -3,31 +3,30 @@
 
 <head>
   <meta name="description"
-    content="Segunda temporada, donde Morticia descubre que su furby le ha sido infiel y emprende una guerra legal contra el.">
+    content="Cuarta temporada de Bebelopers, donde Barbara descubre su amor por las callbacks y abandona a su Mossu para volcar-se en un torbellino de pasión con Javascript">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
-  <title>Segunda temporada</title>
+  <title>Cuarta temporada</title>
 </head>
 
 <body>
   <main>
-    <h1>Segunda temporada</h1>
+    <h1>Cuarta temporada</h1>
     <ul>
       <li>
         <h2>
-          Capitulo 4
+          Capitulo 10
         </h2>
         <p>
-          Cada vez se habla más de un romance secreto entre Barbara y un Mosso d'Esquadra rico mayor que ella. Mientras,
-          su hermano
-          Carol
-          seduce a una cantante para que le ayude en un asunto.
+          Jimena encuentra una nota con una letra que le resulta familiar. Ruth le pide a Leandro un favor en nombre de
+          Óscar.
+          Rosario le da un ultimátum a Franco.
         </p>
       </li>
       <li>
         <h2>
-          Capitulo 5
+          Capitulo 11
         </h2>
         <p>
           Una nueva situación lleva a los hermanos Padding a decidir sobre el futuro de Barbara. Ivan recuerda un evento
@@ -37,12 +36,12 @@
       </li>
       <li>
         <h2>
-          Capitulo 6
+          Capitulo 12
         </h2>
         <p>
-          Lorena le prohíbe a Alex la entrada a la llorería. Barbara tiene planes para Iván y Morticia, que implican a
-          los sobrinos
-          Uribe. Iván se gana la admiración de Lorena.
+          Óscar le pide a Franco que haga un sacrificio. La tensión entre Rosario y Pepita sigue creciendo. La primera
+          noche de
+          Jimena es dura. A Rosario le ofrecen un trabajo.
         </p>
       </li>
     </ul>
