--- a/season01.html
+++ b/season01.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
-  <title>First season</title>
+  <title>Primera temporada</title>
 </head>
 
 <body>
