--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="./season05.html">Temporada 5</a></li>
     <li><a href="./season06.html">Temporada 6</a></li>
     <li><a href="./season07.html">Temporada 7</a></li>
+    <li><a href="./season08.html">Temporada 8</a></li>
   </ul>
 </body>
 
