--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li><a href="./season06.html">Temporada 6</a></li>
     <li><a href="./season07.html">Temporada 7</a></li>
     <li><a href="./season08.html">Temporada 8</a></li>
+    <li><a href="./season09.html">Temporada 9</a></li>
   </ul>
 </body>
 
