--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="./season07.html">Temporada 7</a></li>
     <li><a href="./season08.html">Temporada 8</a></li>
     <li><a href="./season09.html">Temporada 9</a></li>
+    <li><a href="./season10.html">Temporada 10</a></li>
   </ul>
 </body>
 
